Project1/force-app/main/default/objects/Review__c/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <label>Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One Star</fullName>
            </value>
            <value>
                <fullName>Two Stars</fullName>
            </value>
            <value>
                <fullName>Three Stars</fullName>
            </value>
            <value>
                <fullName>Four Stars</fullName>
            </value>
            <value>
                <fullName>Five Stars</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>