Project1/force-app/main/default/objects/Review__c/fields/Review__c.field-meta.xml
<CustomField>
    <fullName>Review__c</fullName>
    <label>Review</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>